--- a/crawler/crawlerGetArticlesTitle.ipynb
+++ b/crawler/crawlerGetArticlesTitle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,25 +35,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def saveFile():\n",
+    "def saveFile(ID, title):\n",
+    "    \n",
     "    #saving the links on the file\n",
-    "    with open('dataArticlesTitle', 'w') as myfile:\n",
+    "    with open('dataArticlesTitle', 'a') as myfile:\n",
     "        \n",
     "        wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
     "    \n",
-    "        for article in tqdm(articlesPgTitle):\n",
+    "        articleID = ID\n",
     "    \n",
-    "            articleID = article[0]\n",
+    "        articleTitle = title\n",
     "    \n",
-    "            articleTitle = article[1]\n",
-    "    \n",
-    "            row = [articleID,articleTitle]\n",
+    "        row = [articleID,articleTitle]\n",
     "        \n",
-    "            wr.writerow(row) "
+    "        wr.writerow(row) "
    ]
   },
   {
@@ -64,15 +63,11 @@
    "source": [
     "articlesPgTitle = []\n",
     "\n",
-    "iteration = 0\n",
-    "\n",
-    "for articlesLink in tqdm(dataArticlesLinks):\n",
+    "for i in tqdm(range(139000, len(dataArticlesLinks))):\n",
     "    \n",
-    "    iteration = iteration + 1\n",
+    "    keyArticle = dataArticlesLinks[i][0]\n",
     "    \n",
-    "    keyArticle = articlesLink[0]\n",
-    "    \n",
-    "    link = articlesLink[1]\n",
+    "    link = str(dataArticlesLinks[i][1])\n",
     "    \n",
     "    if link.find(\"web.archive\") == -1:\n",
     "        \n",
@@ -86,18 +81,19 @@
     "    \n",
     "        pageTitle = str(tree.xpath('//title/text()'))\n",
     "    \n",
-    "        articlesPgTitle.append([keyArticle,pageTitle])\n",
+    "        #articlesPgTitle.append([keyArticle,pageTitle])\n",
+    "          \n",
+    "        saveFile(keyArticle,pageTitle)\n",
     "        \n",
-    "        if iteration == 1000:\n",
-    "            \n",
-    "            saveFile()\n",
-    "            print(\"salvando\")\n",
-    "            \n",
-    "            iteration = 0;\n",
+    "        print(i)\n",
     "        \n",
     "    except:\n",
     "        \n",
-    "        articlesPgTitle.append([keyArticle,'Page Not Found'])\n",
+    "        #articlesPgTitle.append([keyArticle,'Page Not Found'])\n",
+    "\n",
+    "        saveFile(keyArticle,'Page Not Found')\n",
+    "        \n",
+    "        print(i)\n",
     "        \n",
     "        continue"
    ]
@@ -107,21 +103,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('dataArticlesTitle', 'w') as myfile:\n",
-    "        \n",
-    "    wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
-    "    \n",
-    "    for article in tqdm(articlesPgTitle):\n",
-    "    \n",
-    "        articleID = article[0]\n",
-    "    \n",
-    "        articleTitle = article[1]\n",
-    "    \n",
-    "        row = [articleID,articleTitle]\n",
-    "        \n",
-    "        wr.writerow(row)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
