--- a/singleField-TF-IDF.ipynb
+++ b/singleField-TF-IDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,27 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('articlesDataset/cleanDataArticles', delimiter=',', header=None)\n",
+    "articles = pd.read_csv('articlesDataset/testDataset-Articles', delimiter=',', header=None)\n",
     "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "formattedTables = tables.iloc[:,:].values\n",
-    "formattedArticles = articles.iloc[:,:].values"
+    "formattedArticles = articles.iloc[:,:].values\n",
+    "formattedTables = tables.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,26 +61,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "totalArticlesToSearch = 100\n",
-    "\n",
-    "def selectRandomArticles():\n",
+    "def selectArticles():\n",
     "    \n",
-    "    for i in range(totalArticlesToSearch):\n",
+    "    for articles in formattedArticles:\n",
     "    \n",
-    "        randomArticle = random.choice(formattedArticles)\n",
+    "        articlePgID = articles[0]\n",
     "    \n",
-    "        corpusArticlesID.append(randomArticle[0])\n",
+    "        articleTitle = str(articles[1])\n",
+    "    \n",
+    "        articleText = str(articles[2])\n",
+    "    \n",
+    "        catchAll = articleTitle + ' ' + articleText\n",
+    "    \n",
+    "        corpusArticlesID.append(articlePgID)\n",
     "        \n",
-    "        corpusArticlesText.append(str(randomArticle[1]))"
+    "        corpusArticlesText.append(str(catchAll))  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,24 +164,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████▋  | 23/30 [2:04:06<53:58, 462.65s/it]  "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for execution in tqdm(range(30)):\n",
+    "for execution in range(1):\n",
     "    \n",
     "    #print(\"execution = \"+ str(execution))\n",
     "    \n",
     "    corpusArticlesID = []\n",
     "    corpusArticlesText = []\n",
     "    \n",
-    "    selectRandomArticles()\n",
+    "    selectArticles()\n",
     "    \n",
     "    #print(corpusArticlesID)\n",
     "    \n",
@@ -189,7 +185,7 @@
     "\n",
     "        totalSelectedArticles = int(articlesByCharacteristics.shape[0])\n",
     "\n",
-    "        for i in range(totalSelectedArticles):\n",
+    "        for i in tqdm(range(len(corpusArticlesText))):\n",
     "    \n",
     "            distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
     "    \n",
@@ -225,6 +221,23 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# totalArticlesToSearch = 10\n",
+    "\n",
+    "# def selectRandomArticles():\n",
+    "    \n",
+    "#     for i in range(totalArticlesToSearch):\n",
+    "    \n",
+    "#         randomArticle = random.choice(formattedArticles)\n",
+    "    \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
