index elastic search

--- a/elasticSearch.ipynb
+++ b/elasticSearch.ipynb
@@ -12,46 +12,12 @@
     "import random\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch import helpers\n",
-    "indexingTables = Elasticsearch(max_content_length=1000)"
+    "indexingTables = Elasticsearch()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "formattedTables = tables.iloc[:,:].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,126 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def createIndexing():\n",
-    "    \n",
-    "    for tables in tqdm(formattedTables):\n",
-    "        \n",
-    "        tablePgID = tables[0]\n",
-    "        tablePgTitle = str(tables[1])\n",
-    "        tableSectionTitle = str(tables[2])\n",
-    "        tableCaption = str(tables[3])\n",
-    "        tableHeader = str(tables[4])\n",
-    "        tableBody = str(tables[5])\n",
-    "        \n",
-    "        yield {\n",
-    "            \"_index\": \"tables\",\n",
-    "            \"_type\": \"tables\",\n",
-    "            \"_source\": {\n",
-    "                \"tablePgID\": tablePgID,\n",
-    "                \"tablePgTitle\": tablePgTitle,\n",
-    "                \"tableSectionTitle\": tableSectionTitle,\n",
-    "                \"tableCaption\": tableCaption,\n",
-    "                \"tableHeader\": tableHeader,\n",
-    "                \"tableBody\": tableBody\n",
-    "            }\n",
-    "            \n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indexingTables.indices.delete(index='tables')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 298793/298793 [01:51<00:00, 2689.64it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(298793, [])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "helpers.bulk(indexingTables, createIndexing())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indexingTables.indices.close(index='tables')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indexingTables.indices.put_settings(index='tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,18 +46,20 @@
        "{'acknowledged': True, 'shards_acknowledged': True}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "indexingTables.indices.close(index='tables')\n",
+    "indexingTables.indices.put_settings(index='tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
     "indexingTables.indices.open(index='tables')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +104,8 @@
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [tableField] \n",
+    "              \"fields\": [\"tablePgTitle\",\"tableBody\",\"tableHeader\"] \n",
+    "              #\"fields\": [tableField]\n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -265,7 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -340,29 +197,13 @@
      "output_type": "stream",
      "text": [
       "Acc@1\n",
-      "0.1899 (±) 0.3922\n",
-      "0.0035 (±) 0.0591\n",
-      "0.0049 (±) 0.0698\n",
-      "0.0054 (±) 0.0733\n",
-      "0.0138 (±) 0.1167\n",
+      "0.1505 (±) 0.3576\n",
       "Acc@10\n",
-      "0.2818 (±) 0.4499\n",
-      "0.0085 (±) 0.0918\n",
-      "0.0132 (±) 0.1141\n",
-      "0.0191 (±) 0.1369\n",
-      "0.0512 (±) 0.2204\n",
+      "0.2741 (±) 0.4461\n",
       "Acc@100\n",
-      "0.3786 (±) 0.485\n",
-      "0.0265 (±) 0.1606\n",
-      "0.0395 (±) 0.1948\n",
-      "0.0469 (±) 0.2114\n",
-      "0.1268 (±) 0.3327\n",
+      "0.4024 (±) 0.4904\n",
       "Acc@1000\n",
-      "0.466 (±) 0.4988\n",
-      "0.0691 (±) 0.2536\n",
-      "0.0902 (±) 0.2865\n",
-      "0.096 (±) 0.2946\n",
-      "0.2916 (±) 0.4545\n"
+      "0.5339 (±) 0.4988\n"
      ]
     }
    ],
@@ -371,9 +212,9 @@
     "    \n",
     "    print(\"Acc@\"+str(k))\n",
     "    \n",
-    "    for field in tableField:\n",
+    "    #for field in tableField:\n",
     "        \n",
-    "        executeSearch(field,k)"
+    "    executeSearch(field,k)"
    ]
   },
   {
