neural netwok and word embeddings

--- a/singleField-TF-IDF.ipynb
+++ b/singleField-TF-IDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('articlesDataset/testDataset-Articles', delimiter=',', header=None)\n",
+    "articles = pd.read_csv('articlesDataset/articlesTestDataset', delimiter=',', header=None)\n",
     "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,17 +41,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "corpusTables = []\n",
     "\n",
     "for tables in formattedTables:\n",
     "    \n",
-    "    corpusTables.append(str(tables[6]))"
+    "    corpusTables.append(str(tables[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,30 +68,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def selectArticles():\n",
+    "corpusArticlesID = []\n",
+    "corpusArticlesText = []\n",
+    "\n",
+    "for articles in formattedArticles[0:2000]:\n",
     "    \n",
-    "    for articles in formattedArticles:\n",
+    "    articlePgID = articles[0]\n",
     "    \n",
-    "        articlePgID = articles[0]\n",
+    "    articleTitle = str(articles[1])\n",
     "    \n",
-    "        articleTitle = str(articles[1])\n",
+    "    articleText = str(articles[2])\n",
     "    \n",
-    "        articleText = str(articles[2])\n",
+    "    catchAll = articleTitle + ' ' + articleText\n",
     "    \n",
-    "        catchAll = articleTitle + ' ' + articleText\n",
-    "    \n",
-    "        corpusArticlesID.append(articlePgID)\n",
+    "    corpusArticlesID.append(articlePgID)\n",
     "        \n",
-    "        corpusArticlesText.append(str(catchAll))  "
+    "    corpusArticlesText.append(str(articleTitle))  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,94 +133,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AverageTop5 = []\n",
-    "AverageTop10 = []\n",
-    "AverageTop15 = []\n",
-    "AverageTop20 = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def saveAccuracy(k,mean):\n",
+    "def saveAccuracy(k,accuracy):\n",
     "    \n",
-    "    if k == 5:\n",
+    "    if k == 1:\n",
     "            \n",
-    "        AverageTop5.append(np.mean(accuracy))\n",
+    "        AverageTop1.append(accuracy)\n",
     "        \n",
     "    if k == 10:\n",
     "            \n",
-    "        AverageTop10.append(np.mean(accuracy))\n",
+    "        AverageTop10.append(accuracy)\n",
     "        \n",
-    "    if k == 15:\n",
+    "    if k == 100:\n",
     "            \n",
-    "        AverageTop15.append(np.mean(accuracy))\n",
+    "        AverageTop100.append(accuracy)\n",
     "        \n",
-    "    if k == 20:\n",
+    "    if k == 1000:\n",
     "            \n",
-    "        AverageTop20.append(np.mean(accuracy))"
+    "        AverageTop1000.append(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for execution in range(1):\n",
-    "    \n",
-    "    #print(\"execution = \"+ str(execution))\n",
-    "    \n",
-    "    corpusArticlesID = []\n",
-    "    corpusArticlesText = []\n",
-    "    \n",
-    "    selectArticles()\n",
-    "    \n",
-    "    #print(corpusArticlesID)\n",
-    "    \n",
-    "    articlesByCharacteristics = vectorizer.transform(corpusArticlesText)\n",
-    "    \n",
-    "    for accuracyK in range(5,21,5):\n",
-    "    \n",
-    "        accuracy = []\n",
+    "articlesByCharacteristics = vectorizer.transform(corpusArticlesText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2000/2000 [48:42<00:00,  1.63it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "AverageTop1 = []\n",
+    "AverageTop10 = []\n",
+    "AverageTop100 = []\n",
+    "AverageTop1000 = []\n",
     "\n",
-    "        totalSelectedArticles = int(articlesByCharacteristics.shape[0])\n",
+    "topK = [1,10,100,1000]\n",
     "\n",
-    "        for i in tqdm(range(len(corpusArticlesText))):\n",
+    "for i in tqdm(range(len(corpusArticlesText))):\n",
     "    \n",
-    "            distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
+    "    distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
     "    \n",
-    "            idQueryGoal = int(corpusArticlesID[i])\n",
+    "    idQueryGoal = int(corpusArticlesID[i])\n",
     "    \n",
-    "            countTopTables = accuracyK\n",
+    "    for accuracyK in topK:\n",
     "        \n",
-    "            topKRank = nsmallest(countTopTables, distanceVector[0])\n",
+    "        countTopTables = accuracyK\n",
+    "        \n",
+    "        topKRank = nsmallest(countTopTables, distanceVector[0])\n",
     "    \n",
-    "            idRankedTables = getIdRankedTalbes(topKRank,distanceVector[0])\n",
+    "        idRankedTables = getIdRankedTalbes(topKRank,distanceVector[0])\n",
     "    \n",
-    "            accuracy.append(getAccuracy(idRankedTables,idQueryGoal))\n",
-    "    \n",
+    "        accuracy_value = getAccuracy(idRankedTables,idQueryGoal)\n",
+    "        \n",
     "        #save the accuracy on the list\n",
-    "        saveAccuracy(accuracyK,np.mean(accuracy))"
+    "        saveAccuracy(accuracyK,accuracy_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2095 (±) 0.407\n",
+      "0.2815 (±) 0.4497\n",
+      "0.3585 (±) 0.4796\n",
+      "0.411 (±) 0.492\n"
+     ]
+    }
+   ],
    "source": [
-    "print(str(round(np.mean(AverageTop5),4))+\" (±) \"+str(round(np.std(AverageTop5),4)))\n",
+    "print(str(round(np.mean(AverageTop1),4))+\" (±) \"+str(round(np.std(AverageTop1),4)))\n",
     "print(str(round(np.mean(AverageTop10),4))+\" (±) \"+str(round(np.std(AverageTop10),4)))\n",
-    "print(str(round(np.mean(AverageTop15),4))+\" (±) \"+str(round(np.std(AverageTop15),4)))\n",
-    "print(str(round(np.mean(AverageTop20),4))+\" (±) \"+str(round(np.std(AverageTop20),4)))"
+    "print(str(round(np.mean(AverageTop100),4))+\" (±) \"+str(round(np.std(AverageTop100),4)))\n",
+    "print(str(round(np.mean(AverageTop1000),4))+\" (±) \"+str(round(np.std(AverageTop1000),4)))"
    ]
   },
   {
@@ -228,13 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# totalArticlesToSearch = 10\n",
     "\n",
-    "# def selectRandomArticles():\n",
-    "    \n",
-    "#     for i in range(totalArticlesToSearch):\n",
-    "    \n",
-    "#         randomArticle = random.choice(formattedArticles)\n",
     "    \n",
     "        "
    ]
