organizing the files and data analysis

--- a/data_preprocessing/createExperimentalDataset.ipynb
+++ b/data_preprocessing/createExperimentalDataset.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataArticles = articles.iloc[:,:].values\n",
     "dataTables = tables.iloc[:,:].values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -99,11 +106,13 @@
     "    \n",
     "    articleTitle = articles[1]\n",
     "    \n",
+    "    articleText = articles[2]\n",
+    "    \n",
     "    if articlePgID not in distinctArticlesIDs:\n",
     "        \n",
     "        distinctArticlesIDs.append(articlePgID)\n",
     "        \n",
-    "        distinctArticles.append([articlePgID,articleTitle])"
+    "        distinctArticles.append([articlePgID,articleTitle, articleText])"
    ]
   },
   {
