--- a/siamese_network.ipynb
+++ b/siamese_network.ipynb
@@ -2,20 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import tqdm as iterator\n",
+    "from tqdm import tqdm\n",
     "import gensim as gs\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "tknzr = TweetTokenizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,41 +28,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read_file = pd.read_csv('articlesDataset/validationDatasetTitle', delimiter=',', header=None)\n",
+    "validation_dataset = read_file.iloc[:,:].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sequence_padding(X_DIM, value):\n",
+    "    \n",
+    "    value_padding = np.pad(value, ((0,12 - X_DIM),(0,0)), 'constant')\n",
+    "    \n",
+    "    return value_padding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "max_length = []\n",
+    "\n",
+    "def create_corpus():\n",
+    "    \n",
+    "    for rowID, title1, title2, match in train_dataset:\n",
+    "    \n",
+    "        value1 = tknzr.tokenize(str(title1))\n",
+    "        value2 = tknzr.tokenize(str(title2))\n",
+    "        \n",
+    "        corpus.append(value1)\n",
+    "        corpus.append(value2)\n",
+    "        \n",
+    "        max_length.append(len(value1))\n",
+    "        max_length.append(len(value2))\n",
+    "        \n",
+    "create_corpus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lss9/anaconda3/lib/python3.7/site-packages/smart_open/smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
-      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6.385340074577648"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "embedding_model = gs.models.KeyedVectors.load_word2vec_format('pre-trained-models/GoogleNews-vectors-negative300.bin', binary=True)"
+    "np.std(max_length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = list(embedding_model['levy','test'])\n",
+    "embedding_model = gs.models.KeyedVectors.load_word2vec_format('pre-trained-models/crawl-300d-2M.vec')\n",
+    "#embedding_model = gs.models.FastText(size=300, window=3, min_count=1)\n",
     "\n",
-    "x2 = list(embedding_model['levy','test','love'])\n",
-    "\n",
-    "x3 = list(embedding_model['levy'])"
+    "#embedding_model = gs.models.FastText.load_fasttext_format('pre-trained-models/crawl-300d-2M.vec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "embedding_model.build_vocab(sentences=corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_model.train(sentences=corpus, total_examples=len(corpus), epochs=100)"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,10 +133,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "left_train = []\n",
+    "rigth_train = []\n",
+    "label = []\n",
+    "\n",
+    "for rowID, title1, title2, match in tqdm(train_dataset):\n",
+    "    \n",
+    "    value1 = tknzr.tokenize(str(title1))\n",
+    "    \n",
+    "    if len(value1) < 12:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1]\n",
+    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
+    "        left_train.append(padding_embedding1)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        left_train.append(embedding1)\n",
+    "    \n",
+    "    \n",
+    "    value2 = tknzr.tokenize(str(title2))\n",
+    "    \n",
+    "    if len(value2) < 12:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2]\n",
+    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
+    "        rigth_train.append(padding_embedding2)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        rigth_train.append(embedding2)\n",
+    "    \n",
+    "    \n",
+    "    label.append(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "left_train = np.array(left_train)\n",
+    "rigth_train = np.array(rigth_train)\n",
+    "label = np.array(label)"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,7 +197,171 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "left_validation = []\n",
+    "rigth_validation = []\n",
+    "label_validation = []\n",
+    "\n",
+    "for rowID, title1, title2, match in tqdm(validation_dataset):\n",
+    "    \n",
+    "    value1 = tknzr.tokenize(str(title1))\n",
+    "    \n",
+    "    if len(value1) < 12:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1]\n",
+    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
+    "        left_validation.append(padding_embedding1)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        left_validation.append(embedding1)\n",
+    "    \n",
+    "    \n",
+    "    value2 = tknzr.tokenize(str(title2))\n",
+    "    \n",
+    "    if len(value2) < 12:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2]\n",
+    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
+    "        rigth_validation.append(padding_embedding2)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        rigth_validation.append(embedding2)\n",
+    "    \n",
+    "    \n",
+    "    label_validation.append(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "left_validation = np.array(left_validation)\n",
+    "rigth_validation = np.array(rigth_validation)\n",
+    "label_validation = np.array(label_validation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def siamese_model(input_shape):\n",
+    "    \n",
+    "    left = tf.keras.Input(input_shape)\n",
+    "    right = tf.keras.Input(input_shape)\n",
+    "    \n",
+    "    model = tf.keras.Sequential()\n",
+    "    \n",
+    "    model.add(tf.keras.layers.Conv1D(16, kernel_size=3, activation='relu', input_shape=input_shape))\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.Conv1D(32, kernel_size=3, activation='relu'))\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.Conv1D(64, kernel_size=3, activation='relu'))\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.Conv1D(128, kernel_size=3, activation='relu'))\n",
+    "    model.add(tf.keras.layers.MaxPooling1D())\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.Flatten())\n",
+    "    model.add(tf.keras.layers.Dense(512, activation='sigmoid'))\n",
+    "    \n",
+    "    left_encoded = model(left)\n",
+    "    right_encoded = model(right)\n",
+    "    \n",
+    "    L1_layer = tf.keras.layers.Lambda(lambda tensors:tf.keras.backend.abs(tensors[0] - tensors[1]))\n",
+    "    \n",
+    "    L1_distance = L1_layer([left_encoded, right_encoded])\n",
+    "    \n",
+    "    prediction = tf.keras.layers.Dense(1,activation='sigmoid')(L1_distance)\n",
+    "    \n",
+    "    siamese_net = tf.keras.Model(inputs=[left,right],outputs=prediction)\n",
+    "    \n",
+    "    return siamese_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = siamese_model((12,300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=\"binary_crossentropy\",optimizer=\"adam\", metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit([left_train, rigth_train], label, \n",
+    "          epochs=100, \n",
+    "          batch_size=100, \n",
+    "          validation_data=([left_validation, rigth_validation], label_validation))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history.history.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summarize history for accuracy\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
+    "plt.title('model accuracy')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'validation'], loc='upper left')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summarize history for loss\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.title('model loss')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'validation'], loc='upper left')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -102,18 +376,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
