--- a/single_field_TF_IDF.ipynb
+++ b/single_field_TF_IDF.ipynb
@@ -68,14 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpusArticlesID = []\n",
     "corpusArticlesText = []\n",
     "\n",
-    "for articles in formattedArticles[0:2000]:\n",
+    "for articles in formattedArticles[0:1000]:\n",
     "    \n",
     "    articlePgID = articles[0]\n",
     "    \n",
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [48:42<00:00,  1.63it/s] \n"
+      "100%|██████████| 10/10 [00:18<00:00,  1.82s/it]\n"
      ]
     }
    ],
@@ -186,7 +193,7 @@
     "\n",
     "topK = [1,10,100,1000]\n",
     "\n",
-    "for i in tqdm(range(len(corpusArticlesText))):\n",
+    "for i in tqdm(range(len(corpusArticlesText)-990)):\n",
     "    \n",
     "    distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
     "    \n",
@@ -208,17 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2095 (±) 0.407\n",
-      "0.2815 (±) 0.4497\n",
-      "0.3585 (±) 0.4796\n",
-      "0.411 (±) 0.492\n"
+      "0.1 (±) 0.3\n",
+      "0.1 (±) 0.3\n",
+      "0.3 (±) 0.4583\n",
+      "0.4 (±) 0.4899\n"
      ]
     }
    ],
@@ -241,11 +248,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "    \n",
-    "        "
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
