siamese network with LSTM

--- a/data_analysis/data_analysis_tables.ipynb
+++ b/data_analysis/data_analysis_tables.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "# Table Title Analysis\n",
     "\n",
-    "In the next code blocks we analyze the number of word in the table title"
+    "In the next code blocks we analyze the number of words in the table title"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "source": [
     "# Table Section Title Analysis\n",
     "\n",
-    "In the next code blocks we analyze the number of word in the table section title"
+    "In the next code blocks we analyze the number of words in the table section title"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "source": [
     "# Table Caption Analysis\n",
     "\n",
-    "In the next code blocks we analyze the number of word in the table caption"
+    "In the next code blocks we analyze the number of words in the table caption"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "source": [
     "# Table Header Analysis\n",
     "\n",
-    "In the next code blocks we analyze the number of word in the table header"
+    "In the next code blocks we analyze the number of words in the table header"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "source": [
     "# Table Body Analysis\n",
     "\n",
-    "In the next code blocks we analyze the number of word in the table body"
+    "In the next code blocks we analyze the number of words in the table body"
    ]
   },
   {
