--- a/siamese_network.ipynb
+++ b/siamese_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,18 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from nltk.tokenize import TweetTokenizer\n",
-    "tknzr = TweetTokenizer()"
+    "tknzr = TweetTokenizer()\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read_file = pd.read_csv('dataset/trainDataset', delimiter=',', header=None)\n",
+    "train_dataset = read_file.iloc[:,:].values"
    ]
   },
   {
@@ -22,23 +33,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('articlesDataset/trainDatasetTitle', delimiter=',', header=None)\n",
-    "train_dataset = read_file.iloc[:,:].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_file = pd.read_csv('articlesDataset/validationDatasetTitle', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/validationDataset', delimiter=',', header=None)\n",
     "validation_dataset = read_file.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read_file = pd.read_csv('dataset/testDataset', delimiter=',', header=None)\n",
+    "test_dataset = read_file.iloc[:,:].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,47 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = []\n",
-    "max_length = []\n",
-    "\n",
-    "def create_corpus():\n",
-    "    \n",
-    "    for rowID, title1, title2, match in train_dataset:\n",
-    "    \n",
-    "        value1 = tknzr.tokenize(str(title1))\n",
-    "        value2 = tknzr.tokenize(str(title2))\n",
-    "        \n",
-    "        corpus.append(value1)\n",
-    "        corpus.append(value2)\n",
-    "        \n",
-    "        max_length.append(len(value1))\n",
-    "        max_length.append(len(value2))\n",
-    "        \n",
-    "create_corpus()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6.385340074577648"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lss9/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `load_fasttext_format` (use load_facebook_vectors (to use pretrained embeddings) or load_facebook_model (to continue training with the loaded full model, more RAM) instead).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/home/lss9/anaconda3/lib/python3.7/site-packages/smart_open/smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
+      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
+     ]
     }
    ],
    "source": [
-    "np.std(max_length)"
+    "embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')"
    ]
   },
   {
@@ -100,36 +86,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_model = gs.models.KeyedVectors.load_word2vec_format('pre-trained-models/crawl-300d-2M.vec')\n",
-    "#embedding_model = gs.models.FastText(size=300, window=3, min_count=1)\n",
+    "# [0]articleID\n",
+    "# [1]articleTitle\n",
+    "# [2]articleText \n",
     "\n",
-    "#embedding_model = gs.models.FastText.load_fasttext_format('pre-trained-models/crawl-300d-2M.vec')"
+    "# [3]tableID \n",
+    "# [4]tableTitle\n",
+    "# [5]tableSectionTitle\n",
+    "# [6]tableCaption\n",
+    "# [7]tableHeader\n",
+    "# [8]tableBody\n",
+    "\n",
+    "# [9]match"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embedding_model.build_vocab(sentences=corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embedding_model.train(sentences=corpus, total_examples=len(corpus), epochs=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -141,9 +110,9 @@
     "rigth_train = []\n",
     "label = []\n",
     "\n",
-    "for rowID, title1, title2, match in tqdm(train_dataset):\n",
+    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(train_dataset):\n",
     "    \n",
-    "    value1 = tknzr.tokenize(str(title1))\n",
+    "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
     "    if len(value1) < 12:\n",
     "        \n",
@@ -157,7 +126,7 @@
     "        left_train.append(embedding1)\n",
     "    \n",
     "    \n",
-    "    value2 = tknzr.tokenize(str(title2))\n",
+    "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
     "    if len(value2) < 12:\n",
     "        \n",
@@ -202,9 +171,9 @@
     "rigth_validation = []\n",
     "label_validation = []\n",
     "\n",
-    "for rowID, title1, title2, match in tqdm(validation_dataset):\n",
+    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(validation_dataset):\n",
     "    \n",
-    "    value1 = tknzr.tokenize(str(title1))\n",
+    "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
     "    if len(value1) < 12:\n",
     "        \n",
@@ -218,7 +187,7 @@
     "        left_validation.append(embedding1)\n",
     "    \n",
     "    \n",
-    "    value2 = tknzr.tokenize(str(title2))\n",
+    "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
     "    if len(value2) < 12:\n",
     "        \n",
@@ -259,6 +228,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "left_test = []\n",
+    "rigth_test = []\n",
+    "label_test = []\n",
+    "\n",
+    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(test_dataset):\n",
+    "    \n",
+    "    value1 = tknzr.tokenize(str(articleTitle))\n",
+    "    \n",
+    "    if len(value1) < 12:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1]\n",
+    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
+    "        left_test.append(padding_embedding1)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        left_test.append(embedding1)\n",
+    "    \n",
+    "    \n",
+    "    value2 = tknzr.tokenize(str(tableTitle))\n",
+    "    \n",
+    "    if len(value2) < 12:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2]\n",
+    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
+    "        rigth_test.append(padding_embedding2)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        rigth_test.append(embedding2)\n",
+    "    \n",
+    "    \n",
+    "    label_test.append(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "left_test = np.array(left_test)\n",
+    "rigth_test = np.array(rigth_test)\n",
+    "label_test = np.array(label_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def siamese_model(input_shape):\n",
     "    \n",
     "    left = tf.keras.Input(input_shape)\n",
@@ -266,13 +296,13 @@
     "    \n",
     "    model = tf.keras.Sequential()\n",
     "    \n",
-    "    model.add(tf.keras.layers.Conv1D(16, kernel_size=3, activation='relu', input_shape=input_shape))\n",
+    "    model.add(tf.keras.layers.LSTM(16, activation='relu',  dropout=0.2, input_shape=input_shape, return_sequences=True))\n",
     "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.Conv1D(32, kernel_size=3, activation='relu'))\n",
+    "    model.add(tf.keras.layers.LSTM(32, activation='relu',  dropout=0.2, return_sequences=True))\n",
     "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.Conv1D(64, kernel_size=3, activation='relu'))\n",
+    "    model.add(tf.keras.layers.LSTM(64, activation='relu',  dropout=0.2, return_sequences=True))\n",
     "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.Conv1D(128, kernel_size=3, activation='relu'))\n",
+    "    model.add(tf.keras.layers.LSTM(128, activation='relu', dropout=0.2, return_sequences=True))\n",
     "    model.add(tf.keras.layers.MaxPooling1D())\n",
     "    model.add(tf.keras.layers.BatchNormalization())\n",
     "    model.add(tf.keras.layers.Flatten())\n",
@@ -317,8 +347,8 @@
    "outputs": [],
    "source": [
     "history = model.fit([left_train, rigth_train], label, \n",
-    "          epochs=100, \n",
-    "          batch_size=100, \n",
+    "          epochs=10, \n",
+    "          batch_size=32, \n",
     "          validation_data=([left_validation, rigth_validation], label_validation))"
    ]
   },
@@ -327,9 +357,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "history.history.keys()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -368,7 +396,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_prob = model.predict([left_test,rigth_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_prob[y_prob >= 0.5] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_prob[y_prob < 0.5] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_score(label_test, y_prob)"
+   ]
   }
  ],
  "metadata": {
@@ -376,6 +433,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
